feat: added "zap to movie" command